# ExtractMark

./: .gitignore  README.md  Requirements.md  pyproject.toml
configs/: datasets.yaml  defaults.yaml  libraries.yaml  models.yaml
configs/runs/: full_benchmark.yaml  quick_smoke.yaml
eval/prompts/: judge_v1.txt
extractmark/: __init__.py  cli.py  config.py  logging_setup.py  normalize.py  pipeline.py  types.py
extractmark/datasets/: base.py  doclaynet.py  docvqa.py  fintabnet.py  funsd.py  olmocr_bench.py  omnidocbench.py  registry.py
extractmark/evaluators/: base.py  edit_distance.py  llm_judge.py  registry.py  semantic_similarity.py  unit_tests.py
extractmark/libraries/: base.py  camelot_adapter.py  docling_adapter.py  marker_adapter.py  markitdown_adapter.py  mineru_adapter.py  nougat_adapter.py  pdfminer_adapter.py  pdfplumber_adapter.py  pymupdf.py  pypdfium2_adapter.py  python_docx_adapter.py  python_pptx_adapter.py  registry.py  surya_adapter.py  table_transformer_adapter.py  tabula_adapter.py  tesseract_adapter.py  unstructured_adapter.py
extractmark/models/: base.py  prompt_templates.py  registry.py  vllm_model.py
extractmark/reporting/: summary.py
scripts/: download_datasets.py  prepare_datasets.py  run_benchmark.py  run_benchmark.sh  smoke_test.py  test_pipeline.py
tests/: test_config.py  test_datasets.py  test_evaluators.py  test_fixes.py  test_integration.py  test_logging_setup.py  test_model_library_readiness.py  test_models.py  test_normalize.py  test_pipeline.py  test_registries.py  test_reporting.py  test_serving.py  test_types.py
(+3 files in other folders)
