[project]
name = "extractmark"
version = "0.1.0"
description = "Self-hosted document extraction model evaluation benchmark"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "openai>=1.0",
    "jiwer>=3.0",
    "sentence-transformers>=2.0",
    "Pillow>=10.0",
    "psutil>=5.9",
    "rich>=13.0",
]

[project.scripts]
extractmark = "extractmark.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
